# transformer_grammars

./: CONTRIBUTING.md  README.md  install.sh  requirements.txt  sample.py  score.py  setup.py  train.py
configs/: config_tg.py  config_txl.py
example/: config.py  prepare_data.sh  run_sampling.sh  run_scoring.sh  run_training.sh
example/data/: prompt.choecharniak  test.txt  train.txt  valid.txt
tools/: build_dictionary.py  convert_to_choe_charniak.py  encode_offline.py  postprocess_encoded_docs.py  transform_trees.py
transformer_grammars/: __init__.py  common.py  sample.py  score.py
transformer_grammars/data/: constants.py  dictionary.py  preprocessing.py  sentence.py  sp_utils.py  text_dataset.py  text_processing.py  tokenizer_utils.py  transforms.py  transforms_test.py
transformer_grammars/models/: core.py  core_test.py  embedding_layer.py  lm.py  lm_test.py  lr_schedules.py
transformer_grammars/models/masking/: CMakeLists.txt  constants.py  cpp_masking.cc  cpp_masking_test.py  masking_rules.cc  masking_rules.h  masking_types.py  utils.py
transformer_grammars/training/: checkpoint.py  train.py
